# riscv-emulator

./: .gitignore  CMakeLists.txt  README.md  asm_to_bin.py  main.c  main.elf
src/: cpu.cpp  cpu.h  main.cpp  memory.cpp  memory.h
